--- a/README
+++ b/README
@@ -1,5 +1,8 @@
 search and import youtube videos - simple php mysql application example using the cakephp framework...
 
+
+
+
 Installation:
 
 git clone git@github.com:andraskende/youtube-scraper-cakephp-app.git /var/www/domain.com/
@@ -12,11 +15,11 @@ git submodule update
 
 copy Config/database.php.default to Config/database.php and edit database settings
 
-import .sql files from Confif/Schema
+import .sql files from Config/Schema
 
 chmod -R 777 tmp/
 
 domain.com/admin/videos/
 
-default admin login:  admin/admin
+admin login:  admin/admin
 
