--- a/README
+++ b/README
@@ -5,7 +5,7 @@ search and import youtube videos - simple php mysql application example using th
 
 Installation:
 
-git clone git@github.com:andraskende/youtube-scraper-cakephp-app.git /var/www/domain.com/
+git clone https://github.com/andraskende/youtube-scraper-cakephp-app.git /var/www/domain.com/
 
 cd /var/www/domain.com/
 
